--- a/index.html
+++ b/index.html
@@ -10,7 +10,38 @@
 </head>
 
 <body>
-
+    <div id="box1">
+        <p>居中一：</p>
+        <div id="box2"></div>
+    </div>
+    <div id="box3">
+        <p>居中二：</p>
+        <div id="box4"></div>
+    </div>
+    <p>左侧部分宽度固定、右侧部分宽度随浏览器宽度的变化而自适应变化 :</p>
+    <div id="box5">
+        <div class="left">left</div>
+        <div class="right">right</div>
+        <div class="bottom">bottom</div>
+    </div>
+    <p>其中左侧和右侧的部分宽度固定，中间部分宽度随浏览器宽度的变化而自适应变化:</p>
+    <div id="box6">
+        <div class="left">left</div>
+        <div class="middle">middle</div>
+        <div class="right">right</div>
+    </div>
+    <p>实现一个浮动布局，红色容器中每一行的蓝色容器数量随着浏览器宽度的变化而变化 :</p>
+    <ul id="box7">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 
 </html>
