--- a/task2.html
+++ b/task2.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>task2</title>
+    <style>
+        .box1 {
+            border: red 1px solid;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="box1">box1</div>
+    <div id="box1" class="box1 box2">box1</div>
+    <div id="box3" class="box3"></div>
+    <div id="adom">
+        <div class="classa">1</div>
+    </div>
+    <div>2</div>
+    <div data-log>3</div>
+    <div data-time=2015>4</div>
+    <div>5</div>
 </body>
 <script src="js/task2.js"></script>
 
