--- a/task2.html
+++ b/task2.html
@@ -23,6 +23,12 @@
     <div data-log>3</div>
     <div data-time=2015>4</div>
     <div>5</div>
+    <div id="doma">doma</div>
+    <ul id="list">
+        <li id="item1">Simon</li>
+        <li id="item2">Kenner</li>
+        <li id="item3">Erik</li>
+    </ul>
 </body>
 <script src="js/task2.js"></script>
 
