--- a/task2.html
+++ b/task2.html
@@ -29,6 +29,11 @@
         <li id="item2">Kenner</li>
         <li id="item3">Erik</li>
     </ul>
+    <div class="test">
+        <input type="text" id="inputTime">
+        <button id="submit">计算差值</button>
+    </div>
+    <div id="textp"></div>
 </body>
 <script src="js/task2.js"></script>
 
