--- a/todoList.html
+++ b/todoList.html
@@ -46,13 +46,13 @@
     </header>
     <div id="main">
         <ul id="mainLists">
-            <li id="task1" value="1">
+            <li id="class1" value="1">
                 任务分类1
             </li>
-            <li id="task2" value="2">
+            <li id="class2" value="2">
                 任务分类2
             </li>
-            <li id="task3" value="3">
+            <li id="class3" value="3">
                 任务分类3
             </li>
         </ul>
